# aicmdb

./: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/aiauth/: apps.py  authentications.py  middlewares.py  models.py  serializers.py  urls.py  views.py
apps/aiauth/management/commands/: initdepartments.py  inituser.py
apps/aiauth/migrations/: 0001_initial.py
apps/aisource/: apps.py
core/: settings.py  urls.py
